--- a/config/example.yml
+++ b/config/example.yml
@@ -1,3 +1,4 @@
+#comment;
 error_log_file: /Users/ysalmi/webserv.error.log
 error_log_level: warn
 
@@ -8,7 +9,7 @@ http:
 	keep_alive:	65
 	server_props: no
 
-  error_pages: 500 501 502 503 /50x.html
+	error_pages: 500 501 502 503 /50x.html
 
 	error_pages:
 		file: /var/lib/errors/5xx.html
