--- a/config/example.yml
+++ b/config/example.yml
@@ -1,23 +1,31 @@
 #comment;
-error_log_file: /Users/ysalmi/webserv.error.log
-error_log_level: warn
+
+list_property:
+	- value1
+	- value2
+	-	value3
+
+error_log_file   : /Users/ysalmi/webserv.error.log
+error_log_level : warn
+
+# test_property: /Users/ysalmi/wevserv.access.log
 
 http:
-	mime_types:
-		html: text/html
-		jpg: image/jpeg
-	keep_alive:	65
-	server_props: no
+	# mime_types:
+	# 	html: text/html
+	# 	jpg: image/jpeg
+  keep_alive:	65
+  server_props: no
 
-	error_pages: 500 501 502 503 /50x.html
+	# error_pages: 500 501 502 503 /50x.html
 
-	error_pages:
-		file: /var/lib/errors/5xx.html
-		codes:
-			- 500
-			- 501
-			- 502
-			- 503
+	# error_pages:
+	# 	file: /var/lib/errors/5xx.html
+	# 	codes:
+	# 		- 500
+	# 		- 501
+	# 		- 502
+	# 		- 503
 
 	server:
 		port: 8080
@@ -30,3 +38,4 @@ http:
 				- GET
 				- POST
 				- DELETE
+
