--- a/config/example.yml
+++ b/config/example.yml
@@ -3,7 +3,7 @@
 list_property:
 	- value1
 	- value2
-	-	value3
+	- value3
 
 error_log_file   : /Users/ysalmi/webserv.error.log
 error_log_level : warn
@@ -38,4 +38,23 @@ http:
 				- GET
 				- POST
 				- DELETE
+	server:
+		port: 8090
+		name: ysalmi.ma
+		root: /var/www/html
+		index: index.html
+		route:
+			uri: /
+			allowed_methods:
+				- GET
+				- POST
+				- DELETE
 
+html
+{
+	server
+	{
+		port	9090;
+		name	ysalmi.ma;
+	}
+}
