--- a/config/example.yml
+++ b/config/example.yml
@@ -3,10 +3,10 @@ error_log_file   : /Users/ysalmi/webserv.error.log
 error_log_level : warn
 
 cluster:
-  mime_types:
-    default_mime: text/plain
-    # html: text/html
-    # jpg: image/jpeg
+  # mime_types:
+  #   default_mime: text/plain
+  #   html: text/html
+  #   jpg: image/jpeg
   keep_alive:	65
   server_props: no
   error_page:
@@ -14,12 +14,12 @@ cluster:
     codes:
       - 401
       - 404
-      - 414
+      - 41
   server:
     root: /Users/oelbouha/Desktop/web/pages
     Default: yes
-    host: 0.0.0.0
-    port: 8000
+    host: 127.0.0.1
+    port: dsds 8000
     name: localhost
     # index: index.html
     error_page:
@@ -30,7 +30,7 @@ cluster:
     error_page:
       file: /50x.html
       codes:
-        - 414
+        - 41
         - 404
         - 405
     upload: /upload
@@ -56,6 +56,7 @@ cluster:
         - GET
 
   server:
+    host: 127.0.0.1
     index: index.html
     root: /Users/oelbouha/Desktop/web/
     port: 8004
