--- a/config/example.yml
+++ b/config/example.yml
@@ -36,7 +36,7 @@ cluster:
       - .py
 
     route:
-      uri: /test
+      uri: /test/
       root: /Users/oelbouha/Desktop/web/pages
       redirect:
         code: 301
