cgi response timeout added - needed request/upload timeout

--- a/config/example.yml
+++ b/config/example.yml
@@ -6,8 +6,8 @@ cluster:
   default_mime: text/plain
   mime_types:
     jpg: image/jpeg
-  keep_alive:	65
-  # keep_alive_timeout: 25
+  keep_alive:	1
+  keep_alive_timeout: 60
   server_props: no
 
   error_page:
